[metadata]
name = textual-query-sandbox
description = A simple tool for displaying terminal dimensions
version = attr: textual_query_sandbox.__version__
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/davep/textual-query-sandbox
author = Dave Pearson
author_email = davep@davep.org
maintainer = Dave Pearson
maintainer_email = davep@davep.org
license = License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
license_files = LICENCE
keywords = terminal
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Environment :: Console
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Terminals
project_urls =
    Documentation = https://github.com/davep/textual-query-sandbox/blob/main/README.md
    Source = https://github.com/davep/textual-query-sandbox
    Issues = https://github.com/davep/textual-query-sandbox/issues
    Discussions = https://github.com/davep/textual-query-sandbox/discussions

[options]
packages = find:
platforms = any
include_package_data = True
install_requires =
    textual>=0.35.1
python_requires = >=3.7

[options.entry_points]
console_scripts =
    tqs = textual_query_sandbox.__main__:run

### setup.cfg ends here
